Fixed overflow issue on account page.

--- a/WebContent/css/master.css
+++ b/WebContent/css/master.css
@@ -164,6 +164,7 @@ small {
 	bottom: 5%;
 	left: 0px;
 	min-width: 1000px;
+	overflow: auto;
 }
 
 #footer {
